[workspace]
members = ["in-memory-network", "quinn-workbench"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
fastrand = { version = "2.1.0" }
parking_lot = "0.12.3"
pcap-file = "2.0.0"
pnet_packet = "0.34.0"
quinn = "0.11"
quinn-proto = "0.11"
rcgen = "0.13.1"
rustls = { version = "0.23.8", default-features = false, features = ["ring"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_with = "3.11.0"
tokio = { version = "1.37.0", features = ["test-util", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
