[package]
name = "in-memory-network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
async-runtime = { path = "../async-runtime" }
event-listener.workspace = true
fastrand.workspace = true
futures.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
pcap-file.workspace = true
pnet_packet.workspace = true
quinn.workspace = true
uuid.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true

[dev-dependencies]
bon.workspace = true
rcgen.workspace = true
tokio.workspace = true
