[package]
name = "in-memory-network"
version = "0.1.0"
edition = "2024"

[features]
rt-tokio = ["dep:tokio", "quinn/runtime-tokio"]
rt-custom = ["dep:sittard"]

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
cfg-if.workspace = true
event-listener.workspace = true
fastrand.workspace = true
futures.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
pcap-file.workspace = true
pin-project-lite.workspace = true
pnet_packet.workspace = true
quinn.workspace = true
uuid.workspace = true
serde.workspace = true
serde_with.workspace = true
sittard = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
bon.workspace = true
rcgen.workspace = true
