[package]
name = "quinn-workbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fastrand.workspace = true
in-memory-network = { path = "../in-memory-network" }
quinn.workspace = true
quinn-proto.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
parking_lot.workspace = true
